--- a/css/contatoCampo.css
+++ b/css/contatoCampo.css
@@ -12,7 +12,7 @@
   width: 20px;
   height: 20px;
   text-align: center;
-  background-color: #fff;
+  background-color: #00000;
   transform: translate(-7px, -3px);
   border: 1px solid #7D7D7D;
   color: transparent;
