--- a/css/contatoCampo.css
+++ b/css/contatoCampo.css
@@ -62,7 +62,7 @@
 
 .contatoCampo input:focus,
 .contatoCampo textarea:focus {
-  border: 2px solid #222;
+  border: 2px solid #0e0933;
 } 
 
 .contatoCampo-campoDesabilitado {
