--- a/css/contatoCampo.css
+++ b/css/contatoCampo.css
@@ -23,7 +23,7 @@
 .contatoCampo-checkbox:checked + .contatoCampo-label:before {
   content: 'x';
   color: #fff;
-  background-image: radial-gradient(circle, #ff0000, #ff0000);
+  background-image: radial-gradient(circle, #000000, #000000);
 }
 
 .contatoCampo-checkbox {
